Fix extend block alignment

--- a/src/languages/pyret/style-selection/style/scratch.less
+++ b/src/languages/pyret/style-selection/style/scratch.less
@@ -1473,5 +1473,11 @@
 		}
 	}
 
+	.blocks-table-extend-body{
+		> span{
+			display: block;
+			text-align: left;
+		}
+	}
 
 }
